# NGIN

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  NGIN.ngin  README.md
.claude/skills/: build-cpp
.codex/skills/: test-cpp
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  core-ci.yml  crypto-fuzz-ci.yml  crypto-native-ci.yml  crypto-provider-ci.yml  publish-cli.yml  publish-vscode-extension.yml  vscode-extension-ci.yml  workspace-ci.yml
Dependencies/: README.md
Examples/: Common.nginmodel  README.md
Examples/App.Basic/: App.Basic.nginproj  CMakeLists.txt  README.md
Examples/App.Basic/config/: app.cfg
Examples/App.Basic/src/: main.cpp
Examples/App.HostedCore/: App.HostedCore.nginproj  README.md
Examples/App.NativeMinimal/: App.NativeMinimal.nginproj  README.md
Examples/App.ReflectionMetaGen/: App.ReflectionMetaGen.nginproj  README.md
Examples/App.Showcase/: App.Showcase.nginproj  README.md
Examples/Game.Client/: Game.Client.nginproj
Examples/Game.Engine/: Game.Engine.nginproj
Examples/Game.Server/: Game.Server.nginproj
Examples/Hello.Analyzer/: .clang-tidy  Hello.Analyzer.nginproj  README.md
Examples/Hello.Formatter/: Hello.Formatter.nginproj  README.md
Examples/Hello.Hosted/: Hello.Hosted.nginproj  README.md
Examples/Hello.Native/: Hello.Native.nginproj  README.md
Examples/Hello.Reflection/: Hello.Reflection.nginproj  README.md
Examples/Workspace/: NGIN.Workspace.ngin  NGIN.Workspace.nginproj
NGIN.Core/: CMakeLists.txt  README.md
NGIN.Core/docs/: Architecture.md  Migration.md
NGIN.Core/examples/BasicHost/: CMakeLists.txt  Samples.DemoPackage.nginpkg  main.cpp  ngin.package.json  ngin.project.json
NGIN.Core/include/NGIN/Core/: Application.hpp  Config.hpp  Core.hpp  Descriptors.hpp  HostConfig.hpp  Kernel.hpp  Loader.hpp  Services.hpp  Tasks.hpp  Types.hpp  Versioning.hpp
NGIN.Core/src/NGIN/Core/: Application.cpp  Config.cpp  Kernel.cpp  Loader.cpp  Services.cpp
NGIN.Core/tests/: AllTests.cpp  CMakeLists.txt
NGIN.Runtime/: CMakeLists.txt  README.md
NGIN.Runtime/cmake/: NGINRuntimeConfig.cmake.in
NGIN.Runtime/docs/: Architecture.md  Migration.md
NGIN.Runtime/examples/: CMakeLists.txt
NGIN.Runtime/examples/BasicHost/: CMakeLists.txt  main.cpp
NGIN.Runtime/include/NGIN/Runtime/: Config.hpp  Descriptors.hpp  Errors.hpp  Events.hpp  Export.hpp  HostConfig.hpp  Kernel.hpp  Loader.hpp  Module.hpp  Platform.hpp  Runtime.hpp  Services.hpp  Tasks.hpp  Types.hpp  Versioning.hpp
NGIN.Runtime/src/NGIN/Runtime/: Config.cpp  Events.cpp  Kernel.cpp  Loader.cpp  Services.cpp  Tasks.cpp  Versioning.cpp
NGIN.Runtime/tests/: AllTests.cpp  CMakeLists.txt
Tools/: CMakeLists.txt  README.md
Tools/NGIN.CLI/: CMakeLists.txt  NGIN.CLI.nginproj
Tools/NGIN.CLI/src/: Authoring.cpp  Authoring.hpp  Build.cpp  Build.hpp  Commands.cpp  Commands.hpp  Diagnostics.cpp  Diagnostics.hpp  Events.cpp  Events.hpp  MetaGen.hpp  MetaGenClang.cpp  MetaGenCommon.cpp  MetaGenCommon.hpp  MetaGenStub.cpp  Model.hpp  Overlay.cpp  Overlay.hpp  Platform.cpp  Platform.hpp  Publishing.cpp  Publishing.hpp  Resolution.cpp  Resolution.hpp  Support.hpp  Tooling.cpp  Tooling.hpp  main.cpp
Tools/NGIN.CLI/tests/: AllTests.cpp  AuthoringTests.cpp  CMakeLists.txt  CommandAuthoringTests.cpp  CryptoCommandTests.cpp  FacadeTests.cpp  GraphInspectTests.cpp  OverlayTests.cpp  PackageTests.cpp  ProductTests.cpp  TestSupport.hpp  ToolingTests.cpp  WorkspaceTests.cpp
Tools/NGIN.CLI/tests/fixtures/ProjectRef.Config/CollisionLibA/: ProjectRef.Config.CollisionLibA.nginproj
Tools/NGIN.CLI/tests/fixtures/ProjectRef.Config/CollisionLibA/config/: shared.cfg
Tools/NGIN.CLI/tests/fixtures/ProjectRef.Config/CollisionLibB/: ProjectRef.Config.CollisionLibB.nginproj
Tools/NGIN.CLI/tests/fixtures/ProjectRef.Config/CollisionRoot/: ProjectRef.Config.CollisionRoot.nginproj
Tools/NGIN.CLI/tests/fixtures/ProjectRef.Config/Root/: ProjectRef.Config.Root.nginproj
Tools/NGIN.VSCode/: .gitignore  .npmrc  .vscodeignore  LICENSE.txt  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json
Tools/scripts/: fetch-bundled-tools.ps1  fetch-bundled-tools.sh
Workspace/: README.md
Workspace/Catalogs/: package-catalog.xml
Workspace/Releases/: platform-release.xml
cmake/: NGINWorkspace.cmake  NGINWorkspaceStatus.cmake  RunNGINBuildCheck.cmake  RunNGINConfigureCheck.cmake  RunNGINLegacyReject.cmake  RunNGINOutputPreserveCheck.cmake  RunNGINProjectRefConfigCheck.cmake  RunNGINProjectRefConfigCollisionCheck.cmake
cmake/packaging/: NGINPathEnvironment.wxs  NGINPathPatch.xml
docs/: README.md
docs/api-drafts/: NGIN.Core-ApplicationModel.md
docs/architecture/: NGIN-Architecture.md  NGIN-Concepts.md  NGIN-Package-Build-Decisions.md  NGIN-Platform-Direction.md  NGIN-Simplification-And-V2-Plan.md
docs/guides/: nginproj-authoring.md  tool-driver-authoring.md
docs/plans/: NGIN-CLI-Event-Stream-And-JSONL-Plan.md  NGIN-Core-DI-Implementation-Plan.md  NGIN-General-Tooling-And-Quality-Execution-Plan.md  NGIN-Local-Settings-And-Secrets-Plan.md  NGIN-MetaGen-Implementation-Plan.md  NGIN-Package-Repository-And-Restore-Plan.md  NGIN-Project-Model-VNext-Freeform-Plan.md  NGIN-Structured-Conditions-Plan.md  NGIN-Typed-Source-Selectors-Plan.md  NGIN-V4-Implementation-Progress.md  NGIN-V4-Implementation-Workstreams.md  NGIN-V4-North-Star-And-Subsystem-Plans.md
docs/reviews/: ngin-core-refactoring-review.md
docs/schemas/: ngin-tool-driver-v1.schema.json  (+3 more)
manifests/: components.schema.json  module-catalog.json  module-catalog.xml  module-graph.schema.json  module.schema.json  package-catalog.json  package-catalog.schema.json  package-catalog.xml  package-lock.schema.json  package.schema.json  platform-release.json  platform-release.schema.json  platform-release.xml  plugin-bundle.schema.json  plugin-catalog.json  plugin-catalog.xml  project.schema.json  target-catalog.json  target.schema.json  workspace.project.json
tools/: README.md  ngin-sync.py  ngin-sync.sh  ngin.cpp  ngin.py  ngin_tool.py
(+105 files in other folders)
